# uuid

./: .gitignore  LICENSE  README.md  main.cpp  premake5.lua
include/: uuid.hpp
include/uuid/: random_uuid_generator.hpp  uuid.hpp
include/uuid/bits/: random_uuid_generator.hpp
test/: CMakeLists.txt  test-main.cpp
